# danube-connect-core

./: .gitignore  Cargo.toml  README.md  programmatic_config.md
docker/: README.md  TESTING.md  danube_broker.yml  docker-compose.yml
examples/: README.md  schema_sink.rs  schema_source.rs  simple_sink.rs  simple_source.rs
info/: README.md  connector-development-guide.md  connector-message-patterns.md  connector-roadmap.md  connectors.md  unified_configuration_guide.md
src/: config.rs  error.rs  lib.rs  message.rs  metrics.rs  retry.rs  runtime.rs  schema.rs  traits.rs
src/message/: sink_record.rs  source_record.rs
src/runtime/: context.rs  sink_runtime.rs  source_runtime.rs
src/utils/: batching.rs  health.rs  mod.rs  serialization.rs
tests/: config_programmatic.rs  message_types.rs
