[package]
name = "danube-connect-core"
version = "0.4.1"
edition = "2021"
rust-version = "1.70"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube-connect"
documentation = "https://docs.rs/danube-connect-core"
description = "Core SDK for building Danube connectors"
keywords = ["danube", "messaging", "connector", "integration"]

[dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error Handling
thiserror = "1.0.69"

# Utilities
base64 = "0.22"
rand = "0.9.2"

# Metrics
metrics = "0.24.2"

# Danube dependencies
danube-client = "0.6.1"
danube-core = "0.6.1"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"

[features]
default = []
# Future: Add features for optional functionality
